--- a/WutheringWavesUID/templates/index.html
+++ b/WutheringWavesUID/templates/index.html
@@ -16,7 +16,7 @@
     }
 
     body {
-      background-image: url('https://prod-alicdn-community.kurobbs.com/forum/465dcb694966492aba4d4982c47f0e8520240914.jpg');
+      background-image: url('https://i.stardots.io/meme2/1745058591215.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -460,7 +460,7 @@
       document.body.style.backgroundImage = `url(${img.src})`;
       document.body.classList.add('bg-loaded');
     };
-    img.src = 'https://prod-alicdn-community.kurobbs.com/forum/465dcb694966492aba4d4982c47f0e8520240914.jpg';
+    img.src = 'https://i.stardots.io/meme2/1745058591215.jpg';
   }
 
   window.addEventListener('load', loadBackgroundImage);
