--- a/WutheringWavesUID/templates/index.html
+++ b/WutheringWavesUID/templates/index.html
@@ -282,12 +282,12 @@
 <div class="login-container">
   <div class="login-header">
     <div class="banner-text">
-      <div class="welcome-text">欢迎登录</div>
+      <div class="welcome-text">菲比欢迎登录！</div>
       <div class="logo-text">WutheringWavesUID</div>
       <div class="kurobbs-text">库街区</div>
     </div>
     <div class="banner">
-      <img src="https://web-static.kurobbs.com/adminConfig/27/role_icon/1727419309663.png" alt="Banner">
+      <img src="https://i.stardots.io/meme2/1747664431910.webp" alt="Banner">
     </div>
   </div>
   <form id="loginForm">
