--- a/WutheringWavesUID/templates/index.html
+++ b/WutheringWavesUID/templates/index.html
@@ -16,7 +16,7 @@
     }
 
     body {
-      background-image: url('https://i.stardots.io/meme2/1745058591215.jpg');
+      background-image: url('https://i.stardots.io/pheobe/StarDots_2025-09-20T17:40:49.4350Z_8423.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -287,7 +287,7 @@
       <div class="kurobbs-text">库街区</div>
     </div>
     <div class="banner">
-      <img src="https://i.stardots.io/meme2/1747664431910.webp" alt="Banner">
+      <img src="https://i.stardots.io/pheobe/StarDots_2025-09-20T17:42:26.6650Z_5836.webp" alt="Banner">
     </div>
   </div>
   <form id="loginForm">
@@ -460,7 +460,7 @@
       document.body.style.backgroundImage = `url(${img.src})`;
       document.body.classList.add('bg-loaded');
     };
-    img.src = 'https://i.stardots.io/meme2/1745058591215.jpg';
+    img.src = 'https://i.stardots.io/pheobe/StarDots_2025-09-20T17:40:49.4350Z_8423.jpg';
   }
 
   window.addEventListener('load', loadBackgroundImage);
